@@ -34,7 +34,11 @@
 - (void)setInvocation:(NSInvocation *)anInvocation;
 {
     [recordedInvocation release];
-    [anInvocation retainArguments];
+    // When the method has a char* argument we do not retain the arguments. This makes it possible
+    // to match char* args literally and with anyPointer. Not retaining the argument means that
+    // in these cases tests that use their own autorelease pools may fail unexpectedly.
+    if([anInvocation hasCharPointerArgument])
+        [anInvocation retainArguments];
     recordedInvocation = [anInvocation retain];
 }
 
